--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1,68 +1,57 @@
+/*
+* Skeleton V1.2
+* Copyright 2011, Dave Gamache
+* www.getskeleton.com
+* Free to use under the MIT license.
+* http://www.opensource.org/licenses/mit-license.php
+* 6/20/2012
+*/
+
+/* Table of Content
+==================================================
+	#Site Styles
+	#Page Styles
+	#Media Queries
+	#Font-Face */
+
+
 
 /* #Site Styles
 ================================================== */
-
-h2 {
-	font-weight: 100;
-	font-size: 28px;
-}
-
-h5 {
-	font-size: 24px;
-	line-height: 32px;
-	font-weight: 100;
-}
-
 .header {
-	background: #6dd0f7;
+	background: #FFF;
 	top: 0;
-	padding: 40px 20px 20px 30px;
+	padding: 60px 20px 20px 30px;
 	margin-bottom: 40px;
 	font-size: 18px;
 	color: #000;
-	text-align: center;
 	font-family: Helvetica, Arial, Georgia, Verdana, sans-serif;
 }
 
 .header .menu {
-	margin-left: 80px;
-	padding-bottom: 2px;
-	display: inline-block;
-}
-
-.big_pic_holder {
-	width: 100%;
-	text-align: center;
+margin-left: 80px;
+padding-bottom: 2px;
+display: inline-block;
 }
 
 .quote {
-	font-size: 21px;
-	padding: 30px;
-	background: #6dcff6;
-	color: #fff;
-	margin: 20px 0 60px 0;
-}
-
-.right  {
-	float: right;
-	display: inline-block;
-}
+font-size: 100%;
+padding: 30px;
+background: #fff;
+margin: 20px 0 60px 0;
+ }
 
 .sub {
-	color: #000;
-	margin-bottom: 30px;
-	font-weight: 600;
+	color: #222;
+	margin-bottom: 40px;
 }
 
 .header a {
-	color: #fff;
+	/*color: #3A2007;*/
 	margin-right: 10px;
 	text-decoration: underline;
 }
 
-.bar_graph_movement {
-	display: none;
-}
 #Name {
 	margin-right: 90px;
 	font-size: 18px;
@@ -75,7 +64,6 @@ img { max-width: 100%}
 i {font-style: italic;}
 
  b { font-weight: bold !important; }
-
 .back-header {
 	background: #FFF;
 	top: 0;
@@ -88,7 +76,6 @@ i {font-style: italic;}
 .txt p {
 	padding-left: 20px;
 }
-
 .header  h1 {
 	font-style: normal;
 	font-family: helvetica, arial;
@@ -98,6 +85,9 @@ i {font-style: italic;}
 	display: inline;
 	margin-left: 20px;
 }
+
+
+.right { float: right; display: block;}
 
 .preview_box {
 	/*width: 48%;*/
@@ -122,14 +112,10 @@ i {font-style: italic;}
 }
 
 .text-holder {
-	padding: 22px 10px 0 0px;
+	padding: 2px 10px 0 0px;
 	min-height: 150px;
 	margin-bottom: 80px;
 	margin-top: 10px;
-}
-
-.big_pic_holder {
-	display: block;
 }
 
 .more {
