--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -52,7 +52,9 @@
 ================================================== */
 	body {
 		background: #fafafa;
-		font: 20px/25px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+		font-family: "Raleway", Helvetica, arial, sans-serif;
+		font-size: 18px;
+		line-height: : 22px;
 		color: #333;
 		-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
 		-webkit-text-size-adjust: 100%;
@@ -61,12 +63,20 @@
 
 /* #Typography
 ================================================== */
-	h1, h2, h3, h4, h5, h6 {
+	h1, h2, h3, h4, h5, h6, .sub {
 		color: #181818;
-		font-family: Helvetica, arial, sans-serif;
+		font-family: 'Raleway', Helvetica, arial, sans-serif;
 		font-weight: normal; }
+
 	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { font-weight: inherit; }
-	h1 { font-size: 36px; line-height: 50px; color: #333; margin-bottom: 14px;}
+
+	h1 {
+		font-size: 36px;
+		line-height: 50px;
+		color: #333;
+		margin-bottom: 14px;
+	}
+
 	h2 {
 			line-height: 32px;
 			color: #333;
@@ -74,30 +84,51 @@
 			margin-bottom: 4px;
 		}
 
-	h2 a { text-decoration: none; color: #8CC63F; font-size: 24px; line-height: 34px;}
+	h2 a {
+		text-decoration: none;
+		color: #8CC63F;
+		font-size: 24px;
+		line-height: 34px;
+	}
+
 	/*h2 a:hover { text-decoration: underline; color: #8CC63F !important; }*/
-	h3 { font-size: 28px; line-height: 34px; margin-bottom: 8px; }
-	h4 { font-size: 21px; line-height: 32px; margin-bottom: 10px; }
+	h3 {
+		font-size: 28px;
+		line-height: 34px;
+		margin-bottom: 8px;
+	}
+
+	h4 {
+		font-size: 21px;
+		line-height: 32px;
+		margin-bottom: 10px;
+	}
+
 	h5 {
 		font-family: Helvetica, serif;
 		color: #555;
 		font-size: 19px;
-		line-height: 24px; margin-bottom: 10px;
+		line-height: 24px;
+		margin-bottom: 10px;
 	}
-	h6 { font-size: 14px; line-height: 21px; }
-	.subheader { color: #777; }
+
+	h6 {
+		font-size: 14px;
+		line-height: 21px;
+	}
+
+	.sub { font-weight: 400; font-size: 105%}
 
 	p { margin: 0 0 20px 0; }
 	p img { margin: 0; }
-	p.lead { font-size: 21px; line-height: 27px; color: #777;  }
 
 	em { font-style: italic; }
 	strong { font-weight: bold; color: #333; }
 	small { font-size: 80%; }
 
 /*	Blockquotes  */
-	blockquote, blockquote p { font-size: 17px; line-height: 24px; color: #777; font-style: italic; }
-	blockquote { margin: 0 0 20px; padding: 9px 20px 0 19px; border-left: 1px solid #ddd; }
+	blockquote, blockquote p { font-size: 17px; color: #777; font-style: italic; }
+	blockquote { margin: 0 0 20px; padding: 9px 20px 20px 19px; }
 	blockquote cite { display: block; font-size: 12px; color: #555; }
 	blockquote cite:before { content: "\2014 \0020"; }
 	blockquote cite a, blockquote cite a:visited, blockquote cite a:visited { color: #555; }
