--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -21,15 +21,16 @@
 .header {
 	background: #FFF;
 	top: 0;
-	padding: 60px 20px 20px 30px;
+	padding: 60px 20px 30px 30px;
 	margin-bottom: 40px;
-	font-size: 18px;
+	font-size: 16px;
 	color: #000;
-	font-family: Helvetica, Arial, Georgia, Verdana, sans-serif;
+	font-weight: 500;
+	font-family: 'Raleway', Helvetica, Arial, Georgia, Verdana, sans-serif;
 }
 
 .header .menu {
-margin-left: 80px;
+margin-left: 70px;
 padding-bottom: 2px;
 display: inline-block;
 }
