--- a/css/style.css
+++ b/css/style.css
@@ -1,60 +1,15 @@
-/*
-* Skeleton V1.2
-* Copyright 2011, Dave Gamache
-* www.getskeleton.com
-* Free to use under the MIT license.
-* http://www.opensource.org/licenses/mit-license.php
-* 6/20/2012
-*/
 
-
-/* Table of Content
-==================================================
-	#Reset & Basics
-	#Basic Styles
-	#Site Styles
-	#Typography
-	#Links
-	#Lists
-	#Images
-	#Buttons
-	#Forms
-	#Misc */
-
-
-/* #Reset & Basics (Inspired by E. Meyers)
-================================================== */
-	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-		margin: 0;
-		padding: 0;
-		border: 0;
-		font-size: 100%;
-		font: inherit;
-		vertical-align: baseline; }
-	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-		display: block; }
-	body {
-		line-height: 1; }
-	ol, ul {
-		list-style: none; }
-	blockquote, q {
-		quotes: none; }
-	blockquote:before, blockquote:after,
-	q:before, q:after {
-		content: '';
-		content: none; }
-	table {
-		border-collapse: collapse;
-		border-spacing: 0; }
 
 
 /* #Basic Styles
 ================================================== */
 	body {
 		background: #fafafa;
-		font-family: "Raleway", Helvetica, arial, sans-serif;
-		font-size: 18px;
-		line-height: : 22px;
+		font-family: 'Libre Baskerville', 'Raleway', Helvetica, arial, sans-serif;
+		font-size: 16px;
+		line-height: 22px;
+		font-weight: 400;
+		font-style: normal;
 		color: #333;
 		-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
 		-webkit-text-size-adjust: 100%;
@@ -71,7 +26,7 @@
 	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { font-weight: inherit; }
 
 	h1 {
-		font-size: 36px;
+		font-size: 46px;
 		line-height: 50px;
 		color: #333;
 		margin-bottom: 14px;
@@ -93,9 +48,10 @@
 
 	/*h2 a:hover { text-decoration: underline; color: #8CC63F !important; }*/
 	h3 {
-		font-size: 28px;
-		line-height: 34px;
-		margin-bottom: 8px;
+		font-weight: 500;
+		font-size: 18px;
+		color: #000;
+		margin-bottom: 40px;
 	}
 
 	h4 {
@@ -117,7 +73,6 @@
 		line-height: 21px;
 	}
 
-	.sub { font-weight: 400; font-size: 105%}
 
 	p { margin: 0 0 20px 0; }
 	p img { margin: 0; }
@@ -133,7 +88,7 @@
 	blockquote cite:before { content: "\2014 \0020"; }
 	blockquote cite a, blockquote cite a:visited, blockquote cite a:visited { color: #555; }
 
-	hr { border: solid #ddd; border-width: 1px 0 0; clear: both; margin: 10px 0 30px; height: 0; }
+	hr { border: solid #ddd; border-width: 1px 0 0; clear: both; margin: 10px 0 30px 0; height: 1px; }
 
 
 /* #Links
@@ -307,7 +262,203 @@
 /* #Misc
 ================================================== */
 	.remove-bottom { margin-bottom: 0 !important; }
-	.half-bottom { margin-bottom: 10px !important; }
-	.add-bottom { margin-bottom: 20px !important; }
-	.add-top { margin-top: 20px !important; }
-	.half-top { margin-top: 10px !important; }
+	.half-bottom { margin-bottom: 40px !important; }
+	.add-bottom { margin-bottom: 80px !important; }
+	.add-top { margin-top: 80px !important; }
+	.half-top { margin-top: 40px !important; }
+
+
+.header {
+	background: #FFF;
+	top: 0;
+	padding: 60px 20px 30px 30px;
+	margin-bottom: 40px;
+	font-size: 16px;
+	color: #000;
+	font-weight: 500;
+	font-family: 'Raleway', Helvetica, Arial, Georgia, Verdana, sans-serif;
+}
+
+.header .menu {
+margin-left: 70px;
+padding-bottom: 2px;
+display: inline-block;
+}
+
+.quote {
+font-size: 100%;
+padding: 30px;
+background: #fff;
+margin: 20px 0 60px 0;
+ }
+
+
+.header a {
+	/*color: #3A2007;*/
+	margin-right: 10px;
+	text-decoration: underline;
+}
+
+#Name {
+	margin-right: 90px;
+	font-size: 18px;
+	float: right;
+	padding-bottom: 2px;
+}
+
+img { max-width: 100%}
+
+i {font-style: italic;}
+
+ b { font-weight: bold !important; }
+.back-header {
+	background: #FFF;
+	top: 0;
+	padding: 10px 0 10px 2%;
+	margin-bottom: 40px;
+	color: #EB008B;
+
+}
+
+.txt p {
+	padding-left: 20px;
+}
+
+
+
+.right { float: right; display: block;}
+
+.preview_box {
+	/*width: 48%;*/
+	background: #FFF;
+	position: relative;
+	height: 242px;
+	margin-bottom: 0px;
+	padding: 6px;
+
+}
+
+.pic_holder {
+	/*top: 0; position: absolute;*/
+	width: 100%;
+	height: 240px;
+	overflow: hidden;
+	display: block;
+}
+
+.pic_holder img {
+	min-width: 450px; min-height: 250px;
+}
+
+.text-holder {
+	padding: 2px 10px 0 0px;
+	min-height: 150px;
+	margin-bottom: 80px;
+	margin-top: 10px;
+}
+
+.more {
+
+}
+
+.graph {
+	font: 20px;
+	padding: 20px;
+	margin: 0;
+	font-family: 'Oswald', sans-serif;
+	text-transform: uppercase;
+	overflow:hidden;
+	height: 480px;
+	margin-bottom: 40px;
+}
+
+.graph h1 {
+	font-size: 55px;
+	z-index: 100;
+	font-family: 'Oswald', sans-serif;
+	color: #ccc;
+	fill: #ccc;
+	line-height: 80px
+}
+
+
+.graph h2 {
+font-size: 20px;
+font-weight: 400;
+margin-top: 0;
+font-family: 'Oswald', sans-serif;
+color: #000;
+margin-bottom: -16px;
+}
+
+
+
+#footer {
+background-color: #FFF;
+clear: both;
+margin: 120px 0 0px 0px;
+color: #000;
+text-transform: uppercase;
+font-size: 12px;
+padding: 60px 0 60px 40px;
+font-family: helvetica, arial, sans;
+}
+
+.BroonGrey {
+	color: #ccc; /*font-size: 80%; line-height: 70%;*/
+}
+
+/* #Page Styles
+================================================== */
+
+/* #Media Queries
+================================================== */
+
+	/* Laptops */
+
+	@media only screen and (max-width: 1380px) {
+		.header .menu {
+			margin-left: 20px;
+		}
+		#Name {
+    	margin-right: 20px;
+		}
+	}
+
+	@media only screen and (min-width: 960px) and (max-width: 1380px) {
+
+	}
+
+	/* Smaller than standard 960 (devices and browsers) */
+	@media only screen and (max-width: 959px) {}
+
+	/* Tablet Portrait size to standard 960 (devices and browsers) */
+	@media only screen and (min-width: 768px) and (max-width: 959px) {}
+
+	/* All Mobile Sizes (devices and browser) */
+	@media only screen and (max-width: 767px) {}
+
+	/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
+	@media only screen and (min-width: 480px) and (max-width: 767px) {
+		.header {
+			padding: 20px 10px 20px 10px;
+		}
+	}
+
+	/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
+	@media only screen and (max-width: 479px) {
+		.header {
+			padding: 20px 10px 25px 10px;
+    		text-align: center;
+		}
+		#Name {
+			float: none;
+			margin-right: 0;
+		}
+			.header .menu {
+    		margin-left: 0px;
+		}
+		.header a {
+			margin-right: 4px;
+		}
+	}
