--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,6 @@
 		color: #8CC63F;
 	}
 
-	/*h2 a:hover { text-decoration: underline; color: #8CC63F !important; }*/
 	h3 {
 		font-weight: 500;
 		font-size: 18px;
@@ -125,7 +124,13 @@
 /* #Buttons
 ================================================== */
 
-	.button,
+.button {
+	text-decoration: none !important;
+	color: #000;
+	text-align: center;
+}
+/*
+	.button, a .button,
 	button,
 	input[type="submit"],
 	input[type="reset"],
@@ -184,7 +189,9 @@
 		background: #ccc -webkit-linear-gradient(top, rgba(255,255,255,.35) 0%,rgba(10,10,10,.4) 100%); /* Chrome10+,Safari5.1+ */
 		background: #ccc -o-linear-gradient(top, rgba(255,255,255,.35) 0%,rgba(10,10,10,.4) 100%); /* Opera11.10+ */
 		background: #ccc -ms-linear-gradient(top, rgba(255,255,255,.35) 0%,rgba(10,10,10,.4) 100%); /* IE10+ */
-		background: #ccc linear-gradient(top, rgba(255,255,255,.35) 0%,rgba(10,10,10,.4) 100%); /* W3C */ }
+		background: #ccc linear-gradient(top, rgba(255,255,255,.35) 0%,rgba(10,10,10,.4) 100%); /* W3C */
+
+	}
 
 	.button.full-width,
 	button.full-width,
@@ -201,7 +208,7 @@
 	input::-moz-focus-inner {
     border: 0;
     padding: 0;
-	}
+	}*/
 
 
 /* #Forms
