--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,13 @@
 		-webkit-text-size-adjust: 100%;
  }
 
+ /* #Links
+ ================================================== */
+ 	a, a:visited { color: #8CC63F; text-decoration: underline; outline: 0; }
+ 	a:hover, a:focus { color: #603913 !important; }
+ 	p a, p a:visited { line-height: inherit; }
+
+
 
 /* #Typography
 ================================================== */
@@ -42,14 +49,15 @@
 
 	h2 a {
 		text-decoration: none;
-		color: #8CC63F;
+		color: #222 !important;
 	}
 
-	h3 {
+	h3, h3 a {
 		font-weight: 500;
 		font-size: 18px;
-		color: #000;
+		color: #8CC63F;
 		margin-bottom: 40px;
+		text-decoration: none;
 	}
 
 	h4 {
@@ -91,11 +99,6 @@
 	hr { border: solid #ddd; border-width: 1px 0 0; clear: both; margin: 10px 0 30px 0; height: 1px; }
 
 
-/* #Links
-================================================== */
-	a, a:visited { color: #8CC63F; text-decoration: underline; outline: 0; }
-	a:hover, a:focus { color: #603913; }
-	p a, p a:visited { line-height: inherit; }
 
 
 /* #Lists
